# moodle_facade

./: Cargo.toml  bacon.toml  example.env  readme.md
src/: cohorts.rs  main.rs  request.rs  users.rs
